--- a/02_linux_bash_scripting/linux_and_bash.ipynb
+++ b/02_linux_bash_scripting/linux_and_bash.ipynb
@@ -196,6 +196,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Markdown</h1>\n",
+    "\n",
+    "* test\n",
+    "* test\n",
+    "* test\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -402,6 +430,21 @@
    "metadata": {},
    "source": [
     "## Lab: How do you make a Peanut Butter and Jelly Sandwich?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Grab two Pieces of bread\n",
+    "2. Place bread in toaster\n",
+    "3. Toast bread\n",
+    "4. retrive one slice from toaster\n",
+    "5. spread peanut butter on slice\n",
+    "6. Retrive remaining slice from toaster\n",
+    "7. Spread jelly on slice\n",
+    "8. Combine slices\n",
+    "9. Enjoy"
    ]
   },
   {
@@ -663,21 +706,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!date -u"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "passwd -l"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mv -n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2972,7 +3021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
